# authselect

./: zanata.xml
include/: authselect.h
po/: tr.po
profiles/nis/: README  fingerprint-auth  password-auth  system-auth
profiles/sssd/: README  fingerprint-auth  password-auth  smartcard-auth  system-auth
profiles/winbind/: README  password-auth  system-auth
src/common/: debug.c
src/compat/: authcompat.py.in.in  authcompat_Options.py
src/lib/: Makefile.am  authselect_probe.c
src/lib/pam/: pam.h  parser.c  stack.c
src/lib/util/: string.c  string.h
src/man/: authselect-migration.7.adoc
src/tests/: Makefile.am  test_lib_probe.c  test_pam_parser.c  test_pam_stack.c
